修改 node engine 要 >4

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "oss",
     "upload"
   ],
+  "engines": {
+    "node": ">=4"
+  },
   "dependencies": {
     "ali-oss": "^4.4.4",
     "gulp-util": "^3.0.7",
